--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: "Inconsolata", sans-serif;
+    font-family: "Lato", sans-serif;
     height: 100%;
     font-size: 15px;
 }
@@ -129,7 +129,7 @@ img {
     position: relative;
     color: #fff;
     background: no-repeat center / cover
-        url(../img/coffeehouse.jpeg);
+        url(../img/coffee.jpeg);
     padding-top: 34%;
     filter: grayscale(0.5);
 }
@@ -236,7 +236,7 @@ img {
 }
 
 #where-section .form-control {
-    font-family: "Inconsolata", sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 18px;
     border: 1px solid #ccc;
     padding: 16px 8px;
